# bazel_testbed

./: .bazelrc  README.md  WORKSPACE  repositories.bzl
NestedHeaders/: BUILD.bazel
bluepill/: BUILD.bazel  config.json
proto/: BUILD
tests/ios/ui-test/: BUILD.bazel
tests/ios/ui-test/test-app-host/: BUILD.bazel
